// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header snapshot tests Should Header render correctly main page and no-auth status 1`] = `
<header
  className="page-header"
>
  <div
    className="logo"
  >
    <a
      className="logo__link"
      href="/"
      onClick={[Function]}
    >
      <span
        className="logo__letter logo__letter--1"
      >
        W
      </span>
      <span
        className="logo__letter logo__letter--2"
      >
        T
      </span>
      <span
        className="logo__letter logo__letter--3"
      >
        W
      </span>
    </a>
  </div>
  <div
    className="user-block"
  >
    <a
      className="user-block__link"
      href="/login"
      onClick={[Function]}
      style={
        Object {
          "borderRadius": 0,
          "color": "inherit",
          "textDecoration": "none",
        }
      }
    >
      Sign In
    </a>
  </div>
</header>
`;

exports[`Header snapshot tests Should Header render correctly main page and no-auth status 2`] = `
<header
  className="page-header"
>
  <div
    className="logo"
  >
    <a
      className="logo__link"
      href="/"
      onClick={[Function]}
    >
      <span
        className="logo__letter logo__letter--1"
      >
        W
      </span>
      <span
        className="logo__letter logo__letter--2"
      >
        T
      </span>
      <span
        className="logo__letter logo__letter--3"
      >
        W
      </span>
    </a>
  </div>
  <div
    className="user-block"
  >
    <div
      className="user-block__avatar"
    >
      <a
        href="/mylist"
        onClick={[Function]}
      >
        <img
          alt="User avatar"
          height="63"
          src="https://assets.htmlacademy.ru/intensives/javascript-3/avatar/3.jpg"
          width="63"
        />
      </a>
    </div>
  </div>
</header>
`;
